Removed paper header and create simpler navbar, added personal logo, fixed some hero spacing issues

--- a/src/style.css
+++ b/src/style.css
@@ -13,8 +13,8 @@
 }
 
 body {
-  --dot-bg: rgb(248, 248, 248);
-  --dot-color: #ababab;
+  --dot-bg: rgb(249, 249, 249);
+  --dot-color: #bebebe;
   --dot-size: 1.3px;
   --dot-space: 22px;
 	background:
@@ -46,8 +46,7 @@ ul {
 .page-header{
     display: flex;
     flex-wrap: wrap;
-    background: #fff;
-    box-shadow: 4px 4px 4px #878787;
+    /* background: #fff;
     background-image:
         linear-gradient(
         90deg,
@@ -66,11 +65,12 @@ ul {
         var(--dot-bg) 40%,
         #878787 40%,
         #878787 100%
-        );
+        ); */
     background-size: 32px 8px, 32px 16px, 32px 16px;
     background-repeat: space no-repeat;
     background-position: center top, center 6px, center 6px;
     height: fit-content;
+    align-items: center;
     width: 100%;
 }
 
@@ -79,15 +79,18 @@ ul {
     flex-direction: row;
     flex-wrap: wrap;
     margin: 0;
-    padding-top: 2rem;
-    gap: 0.75rem;
+    padding: 0.7rem;
+    gap: 1.5rem;
+    background-color: white;
+    border-radius: 25px;
 
 }
 
 .contact-links .single-contact a {
     cursor: pointer;
     padding: 0;
-    margin: 1%;
+    margin: 0;
+    height: fit-content;
 }
 
 .contact-links img {
@@ -106,11 +109,15 @@ ul {
 
 .personal-logo {
     margin: 0;
-    padding-top: 2rem;
-    width: 10rem;
+    width: 15rem;
 }
 
-
+.personal-logo img {
+    margin: 0;
+    width: 80%;
+    padding-top: 0.5rem;
+    cursor: pointer;
+}
 
 .top-nav {
     display: flex;
@@ -118,14 +125,19 @@ ul {
     flex-wrap: wrap;
     margin: 0 auto;
     gap: 1.5rem;
-    padding-top: 2.5rem;
+    padding: 1.25rem;
     list-style: none;
+    background-color: white;
+    box-shadow: 2px 2px 2px #878787;
+    border-radius: 25px;
 }
 
 #navList li {
     display: flex;
+    align-items: center;
     margin: 0;
     font-size: clamp(14px, 14px, 18px);
+    height: fit-content;
 }
 
 #navList li a {
@@ -135,6 +147,9 @@ ul {
     color: inherit;
     margin: 0;
     padding: 0;
+    height: inherit;
+    align-items: center;
+
 }
 
 .single-contact button {
@@ -214,9 +229,12 @@ li:hover {
 }
 
 .hero{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     justify-self: center;
-    padding-top: 0.5rem;
     width: 50%;
+    height: 50vh;
     text-align: center;
     z-index: 3;
 }
@@ -224,7 +242,7 @@ li:hover {
 
 
 .hero h1 {
-    font-size: 40px;
+    font-size: clamp(35px, 40px, 75px);
 }
 
 .hero p {
@@ -596,8 +614,7 @@ footer{
 }
 
 
-
-/* Media Query for Mobile */
+/* Media Query for Mobile and Tablet*/
 @media (max-width: 812px) {
     .hamburger {
         display: flex;
